Fixed Jetbrains font not showing up in inline code block.

--- a/_sass/addon/syntax.scss
+++ b/_sass/addon/syntax.scss
@@ -31,7 +31,8 @@ html {
 
 /* -- code snippets -- */
 
-pre {
+pre,
+code {
   font-family: 'JetBrains Mono NL', monospace;
 }
 
